Fogbugz #31425 - fixed button alignment

--- a/drupal/profiles/takepart/themes/takepart3/css/style.css
+++ b/drupal/profiles/takepart/themes/takepart3/css/style.css
@@ -3369,7 +3369,7 @@ div.embedaction-content h2.embedaction-divider a span {
     text-shadow: 1px 1px 1px #FFF;
     color: #000;
     text-transform: uppercase;
-    margin-left: 100px;
+    margin-left: 101px;
     font: bold 24px Helvetica,Arial,sans-serif;
 }
 
